--- a/files/style.css
+++ b/files/style.css
@@ -145,6 +145,10 @@ a {
     color: white
 }
 
+.text-right {
+    text-align: right;
+}
+
 .fr_button {
     font-family: Roboto;
     font-weight: 300;
@@ -883,8 +887,9 @@ a {
     margin-right: 0;
     margin-bottom: 0;
     margin-left: 0;
-    width: 33.33%;
-    clear: left;
+    width: 20%;
+    /*width: 33.33%;*/
+    /*clear: left;*/
     max-width: inherit
 }
 
@@ -893,7 +898,8 @@ a {
     margin-right: 0;
     margin-bottom: 0;
     margin-left: 0;
-    width: 33.33%;
+    width: 20%;
+    /*width: 33.33%;*/
     clear: none;
     max-width: inherit
 }
@@ -903,7 +909,8 @@ a {
     margin-right: 0;
     margin-bottom: 0;
     margin-left: 0;
-    width: 33.33%;
+    width: 20%;
+    /*width: 33.33%;*/
     clear: none;
     max-width: inherit
 }
@@ -994,7 +1001,8 @@ a {
     background-position: center center;
     background-size: cover;
     min-height: 13rem;
-    max-width: 1200px
+    max-width: 1200px;
+    height: 450px;
 }
 
 .fr_f4_text_cont {
@@ -1451,7 +1459,6 @@ a {
         float: left
     }
 
-
 }
 
 .fr_text_198 {
@@ -1524,5 +1531,5 @@ a {
 }
 
 .rich-text a {
-   text-decoration: none;
+    text-decoration: none;
 }
