--- a/files/style.css
+++ b/files/style.css
@@ -693,7 +693,7 @@ a {
 .fr_action_container {
     float: none;
     display: block;
-    background-image: linear-gradient(rgba(43, 38, 38, 0.55), rgba(43, 38, 38, 0.55)), url(5.5-inch-website.jpg);
+    background-image: linear-gradient(rgba(43, 38, 38, 0.55), rgba(43, 38, 38, 0.55)), url(5.5-inch-4.jpg);
     background-position: center center;
     background-size: cover;
     position: relative;
