--- a/files/style.css
+++ b/files/style.css
@@ -308,7 +308,7 @@ a {
     padding-top: 150px;
     padding-bottom: 150px;
     background-color: black;
-    background-image: url(bg1.jpg);
+    background-image: url(website-cardmaker.jpg);
     background-size: cover;
 }
 
