update banner2 for cardmaker

--- a/files/cardmaker/style.css
+++ b/files/cardmaker/style.css
@@ -693,7 +693,7 @@ a {
 .fr_action_container {
     float: none;
     display: block;
-    background-image: linear-gradient(rgba(43, 38, 38, 0.55), rgba(43, 38, 38, 0.55)), url(banner2.jpeg);
+    background-image: linear-gradient(rgba(43, 38, 38, 0.55), rgba(43, 38, 38, 0.55)), url(banner2.jpg);
     background-position: center center;
     background-size: cover;
     position: relative;
